--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,4 +27,5 @@ jobs:
 
     - name: Run tests
       run: |
+        export PYTHONPATH=$PYTHONPATH:$(pwd)
         pytest -v --maxfail=1 --disable-warnings
