--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Run tests
       run: |
         export PYTHONPATH=$PYTHONPATH:$(pwd)
-        pytest -v --maxfail=1 --disable-warnings
+        pytest -v --maxfail=1 --disable-warnings --rootdir=.
