--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Initialize database
       run: |
-        python -c "from database import init_database; init_database(reset=True)"
+        python -c "from database import init_database; init_database()"
 
     - name: Run tests
       run: |
