--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,22 @@ pytest==7.4.2
 pytest-mock
 codecov
 pytest-cov
+pip~=22.2.2
+attrs~=23.1.0
+tornado~=6.3.3
+Jinja2~=3.1.2
+typing_extensions~=4.8.0
+MarkupSafe~=2.1.3
+Werkzeug~=3.1.3
+click~=8.3.0
+blinker~=1.9.0
+itsdangerous~=2.2.0
+wcwidth~=0.2.6
+pluggy~=1.6.0
+exceptiongroup~=1.1.3
+iniconfig~=2.1.0
+pexpect~=4.8.0
+numpy~=1.23.4
+packaging~=23.1
+setuptools~=57.4.0
+requests~=2.31.0
