--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,11 @@ jobs:
       with:
         python-version: "3.10"
 
+    - name: Install Playwright
+      run: |
+        pip install playwright pytest-playwright
+        playwright install chromium
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
